--- a/main.tex
+++ b/main.tex
@@ -13,12 +13,15 @@
 % ====================
 
 \usepackage[utf8]{inputenc}
+
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{tikz}
 \usepackage{pgfplots}
 \usepackage{wrapfig,lipsum}
 \usepackage{cleveref}
+
+
 % \usepackage{sidecap}
 
 % ====================
@@ -29,13 +32,17 @@
 % (N+1)*\sepwidth + N*\colwidth = \paperwidth
 \newlength{\sepwidth}
 \newlength{\colwidth}
-\setlength{\sepwidth}{0.03\paperwidth}
-\setlength{\colwidth}{0.45\paperwidth}
+\setlength{\sepwidth}{0.02\paperwidth}
+\setlength{\colwidth}{0.47\paperwidth}
 % \setlength\abovecaptionskip{-5pt}
 \setlength\belowcaptionskip{-5pt}
 \setlength{\headsep}{-5pt}
 
+\newlength{\sepparagraph}
+\setlength{\sepparagraph}{0.5em}
+
 \newcommand{\separatorcolumn}{\begin{column}{\sepwidth}\end{column}}
+\newcommand{\sepnewparagraph}{\vspace{\sepparagraph}}
 
 % ====================
 % Logo (optional)
@@ -50,11 +57,11 @@
 % Footer (optional)
 % ====================
 
-\footercontent{
-	AERSS Conference 2023, Wuhan, China \hfill
-	\insertdate \hfill
-	\href{mailto:myemail@exampl.com}{\texttt{juhaoxing@qq.com}}
-}
+% \footercontent{
+% 	AERSS Conference 2023, Wuhan, China \hfill
+% 	\insertdate \hfill
+% 	\href{mailto:myemail@exampl.com}{\texttt{juhaoxing@qq.com}}
+% }
 % (can be left out to remove footer)
 
 % ====================
@@ -69,11 +76,11 @@
 \addbibresource{references.bib}
 \renewcommand{\pgfuseimage}[1]{\includegraphics[scale=2]{#1}}
 
-\title{A correlation-based selection of VOCs for emission estimates}
+\title{A correlation-based selection of VOCs for emission estimates in Yangtze River Delta}
 
 \author{Haoxing Ju \inst{1} \and Lili Lei \inst{1} \and Zhen Peng \inst{1}}
 
-\institute[shortinst]{\inst{1} Nanjing University} 
+\institute[shortinst]{\inst{1} School of Atmospheric Sciences, Nanjing University, Nanjing, China} 
 % \samelineand \inst{2} Another Institute}
 
 % \date{January 01, 2023}
@@ -86,11 +93,15 @@
     	\begin{block}{Introduction}
     		
             Volatile organic compounds (VOCs) have been listed by China's Ministry of Ecology and Environment (MEE) as key pollutants to be controlled in the series plans since 2013, for they play important roles in 
-            the formation of secondary PM2.5 and troposphere ozone. In most Chemical Transport Model (CTM), errors in emissions could have even larger impacts on forecast than initial conditions(IC)\parencite{Sandu_2011}, and the uncertainty of VOCs emission can reach up to 78\% \parencite{Li_2017}. Thus, it can be expected that a better inversion of VOC emissions could have great impacts on PM2.5 and ozone forecasts.
-            \newline
-            Data assimilation tries to get better estimates based on prior information and observations. Ensemble-based filter is one of the main approaches in atmospheric data assimilation, and many efforts have been devoted to seeking for better VOC estimate using ensemble-based filter(for example, \parencite{Tang_2011, Ma_2019, Xing_2020}). For lacking direct observations of VOC, the common approach is using other correlated observations(usually ozone) to update all VOCs IC/emission via cross-variable assimilation. This approach is convenient to realize, but ignore the differences among VOC species and can thus bring in extra errors in some cases. Also, this approach can hardly use other observations which show no obvious correlation with all VOCs, since conducting cross-variable assimilation between variables with nonlinear relations can be dangerous and can even make the assimilation system diverge (see, for example, \parencite{Tang_2016})
-            \newline
-            We are trying to make a selection for VOC species to be updated based on correlations and potential influence. This selection will respect the different characters among VOCs, and can include more 'not so correlated' observations into assimilation system. The emission estimation will be tested by launching series of 72h forecasts using WRF-Chem V3.6.1.
+            the formation of other pollutants, such as secondary PM\textsubscript{2.5} and troposphere O\textsubscript{3}. In most Chemical Transport Model (CTM), errors in emissions could have even larger impacts on forecast than initial conditions(IC)\parencite{Sandu_2011}, and the uncertainty of VOC emissions can reach up to 78\% \parencite{Li_2017}. Thus, it can be expected that a better estimation of VOC emissions could help to improve CTM forecast results. \\
+            
+            \sepnewparagraph
+            
+            Data assimilation tries to get better estimates based on prior information and observations. Ensemble-based filter is one of the main approaches in atmospheric data assimilation, and many efforts have been devoted to seeking for better VOC estimates using ensemble-based filter(for example, \parencite{Tang_2011, Ma_2019, Xing_2020}). For lacking direct observations of VOC, the common approach is using other correlated observations (O\textsubscript{3} in most of studies) to update ICs/emissions of all VOC species via cross-variable assimilation. This kind of approach is convenient to realize, but the neglection of differences among VOC species could bring in extra errors. Also, this approach can hardly include other observations which show no obvious linear relations with overall VOC, since conducting cross-variable assimilation between variables with strong nonlinear relations could have negative effects on forecasts. (see, for example, \parencite{Tang_2016}) \\
+
+            \sepnewparagraph
+
+            This work tries to make a quantified selection for VOC species to be updated in assimilation system based on correlations/potential influence. The 2022 summer heat wave event in the Yangtze River Delta(YRD) region is selected to conduct real case experiment. This selection will respect the different chemical properties of VOC species, and can include more 'not so correlated' observations into assimilation system. The estimated emissions have been evaluated by launching series of 72h forecasts using WRF-Chem V3.6.1.
     		
     		
     	\end{block}
@@ -103,28 +114,9 @@
 		
 		\begin{column}{\colwidth}
 			
-			\begin{block}{Observation and model setting}
-                \begin{itemize}
-     
-					\item \textbf{meteorology observation}: NCEP GDAS. All in situ observations and cloud motion vectors are assimilated every 6 hours. 
-     
-					\item \textbf{surface chemical observation}: MEE in-situ observation for $PM_{2.5}, PM_{10}, SO_2, NO_2, O_3, CO$. A subset of 560 stations is selected in order to avoid observation correlation. Chemical observation will be assimilated hourly.
-     
-					\item \textbf{simulation model}: WRF-Chem version 3.6.1, model domain refer to \cref{fig1}. 50-member ensemble cycling assimilation starts at 2022-07-20:00 and ends at 2022-07-30:00.
-
-					\item \textbf{assimilation system}: Ensemble Square Root Filter(EnSRF). GSI observation part as forward operator.
-     
-				\end{itemize}
-                \begin{figure}
-                    \centerline{\includegraphics[width=0.8\colwidth,angle=0]{figure/domain_station_split.png}}
-                    \caption{domain setting and station distribution. The left subplot shows model domain in WRF-Chem, shading shows the terrain height. Red rots represent assimilation stations, and green triangles are validation stations in Yangtze River Delta(YRD) region selected by the black polygon. The right subplot shows more detailed station distribution in YRD region.  }\label{fig1}
-                \end{figure}
-
-			\end{block}
-			
-			\begin{block}{Methodology for emission inversion}
+			\begin{block}{Methodology for emission estimation}
 				
-                In order to get emission inversion, we extend emission scaling factors $\lambda$ as part of WRF-Chem model state variables, and it will be integrated by using the ensemble forecast chemical concentration fields produced by WRF-Chem. The flow chat below describes this framework.  
+                To get estimated emissions, the scaling factor $\lambda$ is extended as part of WRF-Chem model state variables. The scaling factor is integrated using ensemble forecasts of chemical concentration produced by WRF-Chem. At each assimilation window, an EnSRF is performed to get scaling factor analysis $\lambda^a$, the estimated emission can then be calculated by multiplying prescribed emission $E^p$ with $\lambda^a$. The flow chat below describes this framework.  
  
                 \begin{figure}
                     \centerline{\includegraphics[width=30pc,angle=0,scale=2.5]{figure/Methodology.png}}
@@ -140,38 +132,51 @@
 			
 				
 			\end{block}
-			
-			\begin{block}{VOC selection}
+
+            \begin{block}{System settings and Observation}
+                \begin{itemize}
+					\item \textbf{simulation model}: WRF-Chem version 3.6.1. The model domain, together with Yangtze River Delta(YRD) region are shown in \cref{fig1},  with a horizontal resolution of 18km. GOCART-RACM-KPP is selected as the aerosol-chemical scheme. 
+
+					\item \textbf{assimilation system}: Ensemble Square Root Filter(EnSRF), with forward operator taken from Gridpoint Statistical Interpolation(GSI). 
+                    \sepnewparagraph
+					\item \textbf{meteorology observation}: NCEP GDAS. All in situ observations and cloud motion vectors are assimilated every 6 hours. 
+     
+					\item \textbf{surface chemical observation}: MEE in-situ observation of $PM_{2.5}, PM_{10}, SO_2, NO_2, O_3, CO$. A subset of 560 stations is selected to be assimilated, in order to avoid correlated observations. There are 95 validation station in YRD region. Details of station distribution can be seen in \cref{fig1}.
+     
+
+     
+				\end{itemize}
+                \begin{figure}
+                    \centerline{\includegraphics[width=0.9\colwidth,angle=0]{figure/domain_station_split.pdf}}
+                    \caption{Domain setting and station distribution. The left subplot shows model domain in WRF-Chem, the shading indicates the terrain height. Red rots represent assimilation stations, and green triangles are validation stations in Yangtze River Delta(YRD) region selected by the black polygon. The right subplot shows more detailed station distribution in YRD region.  }\label{fig1}
+                \end{figure}
+
+			\end{block}
+   
+			\begin{block}{Quantified selection for VOC species}
 
 				
-				% \begin{itemize}
-				% 	\item \textbf{correlation}: 
-				% 	\item \textbf{potential influence}: 
-				% 	\item \textbf{Vestibulum et massa diam}. 
-				% \end{itemize}
-    
-				\begin{figure}
-                    {\includegraphics[width=0.6\colwidth,angle=0,scale=1]{figure/VOC_factor_domainavg.png}}
-                    \caption{Normalized VOC factor for each observation kind. VOCs with a red name will be included in our assimilation system.}\label{fig_voc_factor}
-                \end{figure}
-                A quantified standard will make it clear to decide which VOC species should be assimilated. Here, we propose a VOC factor to quantify which VOC species should be included in the assimilation system. The VOC factor considers two parts:
+
+                \begin{wrapfigure}{c}{0.72\colwidth}
+
+                    \centerline{\includegraphics[width=0.7\colwidth,angle=0]{figure/VOC_factor_domainavg.pdf}}                  
+
+                    \caption{Normalized VOC factor for each observation kind. VOCs with a red name will be included in our assimilation system.}   
+                    \label{fig_voc_factor}
+                \end{wrapfigure}
+
+                \RaggedRight
+                A quantified standard will make it clear to decide which VOC species should be updated by observations. Here, we propose a VOC factor to quantify which VOC species should be included in the assimilation system. The VOC factor considers two parts:
+                \sepnewparagraph
                 \begin{itemize}
-                    \item correlation between observation and VOC species
-                    \item the potential influence of updating VOC species on other variables
-                \end{itemize}        
-                A 50-member ensemble of free forecasts without any assimilation is conducted from 2022-07-10:00 to 2022-08-10:00 to calculate these factors(and also provide spin-up IC for cycling assimilation). Details about the calculation can be seen at the QR code in Appendix.
-			\end{block}
-			\begin{block}{}
-			    \begin{figure}
-                   \begin{minipage}[t]{0.2\colwidth}
-                       \includegraphics[scale=0.2]{logos/aerss_logo.png}
-                   \end{minipage}
-                   \begin{minipage}[t]{0.2\colwidth}
-                       \includegraphics[scale=0.2]{logos/aerss_logo.png}
-                   \end{minipage}
-                \end{figure}
+                    \item The correlation between observation and VOC species.
+                    \item The potential influence of updating VOC species on other variables.
+                \end{itemize}
+                \sepnewparagraph
+                A 50-member ensemble of free forecasts without any assimilation is conducted from 2022-07-10:00 to 2022-08-10:00 to calculate the VOC factor(also provide spin-up IC for cycling assimilation). The potential influence of updating a VOC species is roughly quantified by prescribed emission and average concentration during free forecast period. More details can be found by scan the QR code in Appendix.
 
 			\end{block}
+
 		\end{column}
 	
 		\separatorcolumn
@@ -179,63 +184,119 @@
 		\begin{column}{\colwidth}
 			
 			\begin{block}{Experiment design}
-               We designed four experiments to explore the effects of VOCs selection in assimilation: \texttt{no\_voc, o3\_allvoc, o3\_5pctvoc, allobs\_avgvoc}. The meteorology variables and six main pollutions(including NOx), together with the emission scaling factors, will be updated by their corresponding observations in all experiments, which is the same in \parencite{Peng_2020}. The only difference between the four experiments is the strategy to assimilate VOC species, which is shown in the table below.
+               Four experiments are designed to explore the effects of VOC selection for emission estimates: \texttt{NOVOC, O\textsubscript{3}\_AllVOC, O\textsubscript{3}\_CSVOC, AllOBS\_CSVOC}. \\
+               
+               \sepnewparagraph
+               
+               A cycling assimilation system is launched for each experiment from 2022-07-20:00 to 2022-07-30:00. The assimilation cycle period is 6h for meteorology variables and 1h for chemical variables/scaling factors. The meteorology variables and six main pollutions, together with their corresponding scaling factors, will be updated in all experiments, which is the same in \parencite{Peng_2020}. The difference between four experiments is the strategy to update VOC species, which is shown in the table below. \\
+
                 \begin{table}[t]
+
                     \begin{center}
-                    \begin{tabular}{ccccrrcrc}
-                    \hline\hline
-                     & no\_voc & o3\_allvoc & o3\_5pctvoc & allobs\_avgvoc \\
-                    ket & x & o3 & o3 & pm25/no2/co/o3 \\ 
-                    hcho & x & o3 & o3 & pm25/no2/co/o3 \\ 
-                    tol & x & o3 & x & pm25/no2/co \\ 
-                    oli & x & o3 & o3 & o3 \\ 
-                    ald & x & o3 & o3 & pm25/no2/co \\ 
-                    hc8 & x & o3 & x & no2 \\ 
-                    hc5 & x & o3 & x & no2 \\ 
-                    xyl & x & o3 & x & x \\ 
-                    eth & x & o3 & x & x \\ 
-                    hc3 & x & o3 & x & x \\ 
-                    olt & x & o3 & x & x \\ 
-                    ora2 & x & o3 & x & x \\ 
-                    iso & x & o3 & x & x \\ 
-                    csl & x & o3 & x & x \\ 
+                    \begin{tabular}{l@{\hskip 2\sepwidth}l@{\hskip 2\sepwidth}l}
                     \hline
-                    
-                    
+                    \hline
+                    \vspace{0.5em}
+                    \textbf{Experiment} & \textbf{Observation} & \textbf{VOC species to be updated} \\
+                    \vspace{0.5em}
+                    NOVOC & N/A & N/A \\
+                    \vspace{0.5em}
+                    O\textsubscript{3}\_AllVOC & O\textsubscript{3} & All VOC species \\
+                    \vspace{0.5em}
+                    O\textsubscript{3}\_CSVOC & O\textsubscript{3} & KET/HCHO/OLI \\
+                    AllOBS\_CSVOC & O\textsubscript{3} & KET/HCHO/OLI \\
+                     & PM\textsubscript{2.5} & KET/HCHO/OLI \\
+                     & NO\textsubscript{2} & KET/HCHO/TOL/ALD/HC8/HC5 \\
+                     & CO & KET/HCHO/TOL/ALD \\
                     \hline
                     \end{tabular}
                     
                     \end{center}
-                    \caption{VOC selection table. The columns are experiments, the rows are 14 RACM VOC species. If the value is "x", this VOC will not be updated by any observation in the column experiment. If the value is observation type(s), this VOC will be updated by the given observation type(s) in the column experiment. }\label{tab_voc}
+                    \caption{Description of VOC selections for each experiment. The VOC species and corresponding scaling factors in the 3rd column will be updated by observations in the 2nd column.}\label{tab_voc}
                     
                 \end{table}
-                Starting on Jul 22nd, every UTC00, 06, 12, 18, a deterministic 72h forecast will be launched based on the ensemble mean of cycling analysis and the posterior emission to evaluate the assimilation system.
+                
+               Since there is no direct emission observations, the estimated emissions will be evaluated by launching series of 72h forecasts. Starting at 2022-07-22:00, every 6h a deterministic forecast is launched with ensemble mean of cycling analysis as IC and emission estimates of last day as emission input. \\
+               \sepnewparagraph
+               It should be noted that all kinds of chemical observations have already been used to update their corresponding state variables, thus no new observation is introduced into assimilation system to update VOC species.
+
 			\end{block}
-			
-			\begin{alertblock}{72H ozone/PM2.5 forecast results}
-				
+
+			\begin{alertblock}{Emission estimates}
                 \begin{figure}
-                    \centerline{\includegraphics[width=0.8\colwidth,angle=0]{figure/fcst72h_00_6hcycle_final.png}}
-                    \caption{RMSE/BIAS/CORR values averaged over all sets of forecasts. Columns are o3 and PM25, and rows are corresponding RMSE/BIAS/CORR for o3 and PM25. The right bars in each subplot represent the averaged value of RMSE/BIAS/CORR.}\label{fcst_result}
-                \end{figure}
-                \begin{itemize}
-                    \item When using only ozone obs, a VOC selection results better RMSE and BIAS of PM2.5 forecasts.
+                \begin{minipage}[c]{0.8\textwidth}
+                    \includegraphics[width=\textwidth]{figure/emiss_ts_diurnal_witho3.pdf}
+                \end{minipage}
+                \hfill
+                 \begin{minipage}[c]{0.18\textwidth}
+                    \RaggedRight
+                    \caption{The left subplot shows time series of overall VOC emission estimates in each experiment. The right subplot presents diurnal-variation of overall VOC emission estimates in left y-axis, and diurnal-variation of O\textsubscript{3} observation  in right y-axis.}\label{fig_emiss_ts}                     
+                 \end{minipage}   
+
                     
-                    \item A VOC selection makes it possible to utilize 'uncorrelated' obs, and results better forecast performace for both PM2.5 and ozone.
-                \end{itemize}
-			\end{alertblock}
-			
-			\begin{alertblock}{estimated emission}
-                \begin{figure}
-                    \centerline{\includegraphics[width=0.8\colwidth,angle=0]{figure/POSTERIOR_emiss_timeseries_24Havg_final.png}}
-                    \caption{Time series of the ensemble mean of overall VOC emissions in each experiment. The left subplot shows the whole cycling period, and the right subplot shows the time series averaged every 24H. }\label{fig_emiss_ts}
                 \end{figure}
+                
                 \begin{itemize}
-                    \item The "allobs\_avgvoc" emission shows an obvious daily change, with a peak during the daytime and a valley after sunset.
-                    \item The daily change of VOC emission after selected updates is consistent with Ozone's daily change, and the updated emission peak in daytime can help the model to overcome the underestimation of Ozone simulation shown in \cref{fcst_result}
+                    \item O\textsubscript{3}\_AllVOC estimates have an obvious diurnal variation, but show a suspicious drop in UTC00-UTC03.
+                    \item O\textsubscript{3}\_CSVOC estimates fix the suspicious drop in UTC00-UTC03, but present little diurnal variation. This is because only 3 VOC emissions are updated in this experiment, others remain unchanged compared to the prescribed emissions.
+                    \item AllOBS\_CSVOC estimates also show an obvious diurnal variation, with a constant peak in daytime. This variation in daytime is similar to the YRD averaged O\textsubscript{3} observation. As important precursors of O\textsubscript{3}, this peak in daytime could help the model to overcome the underestimation  of O\textsubscript{3}, as show in in \cref{fcst_result}.
                 \end{itemize}
 
 			\end{alertblock}
+
+			\begin{alertblock}{72H O\textsubscript{3}/PM\textsubscript{2.5} forecast results}
+                % \begin{minipage}{0.7\colwidth}
+                % \begin{figure}
+                %     \begin{minipage}[c]{0.7\textwidth}
+                %         % \centerline{\includegraphics[width=0.7\colwidth,angle=0]{figure/fcst72h_00_6hcycle_nocorr.pdf}}
+                %         \includegraphics[width=0.7\colwidth,angle=0]{figure/fcst72h_00_6hcycle_nocorr.pdf}
+                %     \end{minipage}
+                %     \hfill
+                %     \begin{minipage}[c]{0.3\textwidth}
+                %     \caption{Averaged RMSE/BIAS value for O\textsubscript{3}(1st column) and PM\textsubscript{2.5}(2nd column). The bars on the rightside in each subplot represent the mean value . Units for all this variables: $\mu g/m^3$}                    
+                %     \end{minipage}
+                %     \label{fcst_result}    
+                % \end{figure}
+                % \end{minipage}
+
+                \begin{figure}
+                  \begin{minipage}[c]{0.8\textwidth}
+                    \includegraphics[width=\textwidth]{fcst72h_00_6hcycle_nocorr.pdf}
+                  \end{minipage}\hfill
+                  \begin{minipage}[c]{0.18\textwidth}
+                    \caption{Averaged RMSE/BIAS value for O\textsubscript{3}(1st column) and PM\textsubscript{2.5}(2nd column). The bars on the rightside in each subplot represent the mean value . Units for all this variables: $\mu g/m^3$}    
+                    \label{fcst_result}
+                  \end{minipage}
+                \end{figure}
+                
+                \begin{itemize}
+                    \item O\textsubscript{3}\_AllVOC(yellow) shows little RMSE/BIAS improvements for O\textsubscript{3} and PM\textsubscript{2.5} forecasts compared with NOVOC(black). 
+                    \item O\textsubscript{3}\_CSVOC(green) has obvious improvements in PM\textsubscript{2.5} RMSE/BIAS, but failed to improve O\textsubscript{3} forecasts.
+                    
+                    \item AllOBS\_CSVOC shows advantage for both O\textsubscript{3} and PM\textsubscript{2.5} forecasts, especially in reducing O\textsubscript{3} BIAS. Possibly because AllOBS\_CSVOC estimates have a constant peak in daytime, which compensates for the underestimation of O\textsubscript{3} and serves as a model error correction.
+                \end{itemize}
+			\end{alertblock}
+   
+			\begin{block}{}
+			    \begin{figure}
+                   \begin{minipage}[c]{0.24\colwidth}
+                       \includegraphics[height=6em]{logos/aerss_logo.png}
+                   \end{minipage}
+                   \begin{minipage}[c]{0.24\colwidth}
+                       \textbf{Reference: }\\
+                       \includegraphics[height=6em]{logos/Reference.png}
+                   \end{minipage}
+                   \begin{minipage}[c]{0.24\colwidth}
+                       \textbf{VOC factor details: }\\
+                       \includegraphics[height=6em]{logos/vocfactor_detail.png}
+                   \end{minipage}
+                   \begin{minipage}[c]{0.24\colwidth}
+                       \textbf{Poster source code:}\\
+                       \includegraphics[height=6em]{logos/source_code.png}
+                   \end{minipage}
+                \end{figure}
+
+			\end{block}
 			
 		\end{column}
 		
